# Brotein

./: .gitignore  .gitignore.bak  line_main.py  line_main_en.py  line_utils.py  line_utils_en.py  pyproject.toml  requirements.txt
backend/: run_backend.py  run_backend_app.py  run_backend_web.py
backend/api/: endpoints_app.py  endpoints_web.py
backend/models/: database.py
backend/seg/: 01.json  08.json  10.json  boxing prompt  food_recognition.py  format.py  gemini_bounding_box.py  gemini_food_list.py  gemini_plot  nutrition prompt  plot.py  sam2_auto_annotation.py  sam2_seg.py  seg_SAM.py  seg_YOLO.py  show_SAM.py  yolo_cls.py  yolo_det.py  yolo_seg.py  yolo_world.py
backend/seg/S__7069700_auto_annotate_labels/: S__7069700.txt
backend/utils/: db_session.py  gemini_api.py  openai_api.py  s3_api.py  util.py
frontend/: run_frontend.py
frontend/static/css/: style_analysis.css  style_history.css  style_homepage.css  style_user_info.css
frontend/static/js/: analysis.js  history.js  homepage.js  user_info.js
frontend/templates/: analysis.html  history.html  homepage.html  user_info.html
