[tool.poetry]
name = "brotein"
version = "0.1.0"
description = "nutrition analysis"
authors = ["catvin desktop <b02202040@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
httpx = "^0.27.2"
pillow = "^11.0.0"
pytz = "^2024.2"
flask = "^3.0.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
python-multipart = "^0.0.17"
boto3 = "^1.35.59"
openai = "^1.54.4"
google-generativeai = "^0.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
